--- a/Materias/2S2020/PED_CE342/Turma_A/218975.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/218975.org
@@ -36,3 +36,18 @@
 
 
 No início de sua resenha, corretamente pontua que a principal implicação do monetarismo é a recomendação de uma regra monetária. No entanto, isso não implica seguir uma meta de inflação como colocado, mas sim, uma meta de expansão da base monetária. Em seguida, corretamente pontuou a TQM enquanto teoria da demanda por moeda. Poderia apenas ter dado mais atenção a implicação que tal demanda é estável. Ao descrever a TND, poderia ser mais preciso com ``ação humana''. Os monetaristas, por exemplo, sugerem políticas do lado da oferta para que a TND seja menor. Além disso, poderia explicitado que este conceito esta associado às particularidades estruturais e institucionais da economia. Ao longo do seu texto, a TND ocupa uma papel maior que a TQM para explicar a inflação. Relacionado a isso, quando descreve a curva de Phillips aceleracionista, dá a entender que o trade-off entre inflação e desemprego existe. No entanto, Friedman argumenta que seria necessário níveis cada vez maiores de inflação para que a taxa de desemprego ficasse abaixo da TND (eis o porquê de aceleracionista). Mais ao fim, atribui essa "hipótese aceleracionista" à TQM, sendo que costuma estar relacionada à curva de Phillips. Em seguida, associa corretamente a convergência a TND. No entanto, não há menção de que as implicações macroeconômicas de variações no estoque de moeda são temporários (justamente por essa convergência a TND).
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
