--- a/Materias/2S2020/PED_CE342/Turma_A/219613.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/219613.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Corretamente situa o keynesianismo (ortodoxo) enquanto escola predominante pré-monetaristas. No entanto, ao descrevê-la incorre na imprecisão de que a moeda não era relevante. Mais precisamente, seria a política monetária que deixa de ser eficaz em algumas condições. Além disso, para Keynes, a moeda era bastante relevante. Adiante, corretamente pontua as regras monetárias enquanto principal proposição do monetarismo. Em seguida, corretamente pontua que o monetarismo parte da hipótese de que as economias são estáveis. No entanto, tal hipótese não pode ser desassociada da TQM. Adiante, expõe corretamente quais são os determinantes da demanda por moeda, mas não pontua que isso implica estabilidade. Adiante, descreve corretamente os efeitos de curto prazo da política monetária. No entanto, dá a entender que a expansão monetária não é indiscriminadamente no longo prazo por ser insustentável (vide explosão inflacionária). Este argumento está quase completo, faltou mencionar que a economia convergiria, na ausência de distúrbios monetários, à taxa natural de desemprego e, portanto, não geraria efeitos reais.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
