--- a/Materias/2S2020/PED_CE342/Turma_A/219907.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/219907.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Em seus dois parágrafos de abertura, é corretamente pontuada a contribuição da escola Keynesiana e seu contraponto à TQM clássica. Adiante, pontua a leitura monetarista de que a TQM é tratada como uma teoria de demanda por moeda. Em seguida, destaca que a TQM monetarista implica estabilidade na demanda por moeda. No entanto, não há nenhuma menção de que a oferta de moeda é considera exógena. Fica aqui o registro de que tentou pontuar elementos comparativos entre as escolas mencionadas de forma crítica. Apresentou corretamente a curva de Phillips monetarista. Há uma imprecisão ao fim deste parágrafo em que afirma que a taxa de expansão da base monetária deve ser constante. Mais precisamente, a proposição é a expansão do estoque de moeda deve seguir a taxa de crescimento do produto. Sendo assim, não é exatamente constante. A razão entre taxa de crescimento do estoque de moeda e do produto, por outro lado, é constante.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
