--- a/Materias/2S2020/PED_CE342/Turma_A/220194.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/220194.org
@@ -36,3 +36,18 @@
 ** Comentários individuais 
 
 Em seu parágrafo de abertura, estão colocados os elementos centrais da escola monetarista. Apenas sugiro cuidado no uso da palavra "axioma". Em seguida, quando apresentou a hipótese das expectativas adaptativas, confundiu a descrição da hipótese (agentes formam expectativas com base no aprendizado do período anterior) com a implicação (ilusão monetária). O mesmo se aplica à exposição da ilusão monetária em que descreve em termos de não diferenciação de variação da inflação com a variação de preços relativos. Por mais que tal ideia esteja, no limite, correta poderia ser apresentada mais objetivamente: ganhos nominais compreendidos pelos trabalhadores como se fossem reais. Adiante, corretamente pontuou que o /trade-off/ entre inflação e desemprego só ocorre na presença de inflação surpresa. Ao descrever a TQM, poderia ter indicado as hipóteses que implicam estabilidade na demanda por moeda. Tal desenvolvimento teórico é fundamental para explicar o porquê de distúrbios econômicos se originarem da má gestão da política monetária.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
