--- a/Materias/2S2020/PED_CE342/Turma_A/237618.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/237618.org
@@ -43,3 +43,18 @@ Em relação à curva de Phillips, fica um questionamento: a ausência do /trade
 No parágrafo seguinte, você menciona a TQM, mas vai pouco além. Por mais que a TQM é proposta por outras escolas que são anteriores ao monetarismo, seu resgate e às hipóteses associadas à ela são fundamentais para explicar as implicações da variação da oferta de moeda. Caberia aqui pontuar mais sua relevância. Exemplo disso é: como explicar a proposição de regime monetário sem ter como pressuposto que a velocidade de circulação da moeda é estável?
 
 No parágrafo final, você entra em alguns debates sem as devidas mediações. Primeiramente é importante pontuar que esse esforço de conectar uma discussão dos países centrais aos problemas e particularidades da periferia é louvável. No entanto, você está discutindo (mesmo que de forma não intencional) diferentes teorias da inflação e um mesmo texto sem fazer muitas concessões. Por exemplo: ao discutir inflação nos países periféricos em razão dos preços importados, você está associando aumento de preços aos elementos do lado da oferta e não da demanda (como fazem os monetaristas). Apesar dessa minha ressalva, não irei descontar nota em função dessa discussão final. Por fim, fica expresso aqui meu reconhecimento de fazer uma leitura crítica do tema proposto. Apenas se atente às transições e mediações entre os temas.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido totalmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
