--- a/Materias/2S2020/PED_CE342/Turma_A/238414.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/238414.org
@@ -41,3 +41,18 @@
 
 
 No parágrafo de abertura, corretamente coloca o monetarismo enquanto contraponto ao keynesianismo ortodoxo. Adiante, corretamente pontua a TQM enquanto uma teoria da demanda por moeda. Poderia apenas ter enfatizado que tais hipóteses levam à conclusão de que a demanda por moeda é estável. A seguir, corretamente contextualiza a curva de Phillips aceleracionista. No entanto, até o momento não descreve o porquê de ser aceleracionista. Também esta correta a descrição de que a curva de Phillips é vertical no longo prazo. Há, porém, uma imprecisão a respeito da ilusão monetária. Esta diz respeito da interpretação de que aumentos nominais enquanto reais. Além disso,  não há menção à taxa natural de desemprego, fundamental para compreender o porquê da curva de Phillips ser vertical no longo prazo. Por fim, apesar de completa, sua resenha não apresenta explicitamente o porquê da necessidade de regras monetárias por mais que tenha exposto os elementos para chegar a essa conclusão.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado. Vale pontuar que foi sinalizado um trecho como plágio.
