--- a/Materias/2S2020/PED_CE342/Turma_A/239052.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/239052.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 No início de sua resenha, corretamente pontuou a proposição monetarista para a condução da política econômica. Em seguida, irei analisar se sua argumentação te permite chegar à essa conclusão. Adiante, foram destacados os conceitos centrais desta escola. Ao discutir a Curva de Phillips, poderia ter indicado que para se obter taxas de desemprego abaixo da natural, seria necessário conviver com taxas de inflação cada vez mais elevadas. Em seguida, descreveu corretamente a ilusão monetária e como esta relacionada à inflação surpresa. No entanto, seria necessário associar isso à TQM e respectiva implicação de estabilidade na demanda por moeda. No parágrafo seguinte, destaca corretamente a distinção entre regra e discricionariedade da política monetária. Por fim, é apresentada a TQM. Tendo em vista a importância deste constructo teórico para as conclusões da escola monetarista, tal discussão poderia ter sido antecipada e apresentada em maiores detalhes.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
