--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
@@ -237,7 +237,7 @@ plt.show()
 #+RESULTS:
 [[file:./figs/monetaristas_presenca.png]]
 
-
+* Novos Clássicos
 * Lista de presença e notas
 ** Lista de chamada com nota das resenhas                            :ignore:
 #+NAME:Lista
