--- a/Articles/SFC/Versoes/Historico.org
+++ b/Articles/SFC/Versoes/Historico.org
@@ -174,6 +174,47 @@ Inalterada em relação à versão anterior
 - Documento Endividamentos.pdf corrigido em <2020-11-04 qua>
   - Já enviado
 
+* Versão <2020-11-11 qua>
+
+** Introdução
+
+Não alterado.
+
+** Fatos estilizados
+
+Não alterado.
+
+** Modelo
+
+Não alterado.
+
+** Simulações
+
+*** Introdução
+
+Feitas as correções sugeridas.
+
+*** Choque na taxa de salários
+
+- Primeira frase alterada para
+
+#+BEGIN_QUOTE
+A wage-share decrease has permanent negative impact on output level --- due to changes on the supermultiplier --- and temporary negative effects on degree of capacity utilization (see Figure 5 A).
+#+END_QUOTE
+
+- Lower $\Rightarrow$ smaller
+- Expenditure -> Expenditures
+- This result stem from the $\Rightarrow$ This result is explained by
+- Figuras das simulações (e a primeira com dados reais) voltaram a ser coloridas
+  - Tanto da seção dos fatos estilizados quanto os demais graficos da simulação com dados reais continuam em escala de cinza
+- [ ] Decidir se plota riqueza em função da renda disponível ou estoque de capital
+  - [ ] Ajustar tabela resumo dos resultados
+  - [ ] Ajustar texto
+  - [ ] Ajustar equação
+- [ ] Corrigir tabela resumo dos resultados
+  - [ ] Letra K
+  - [ ] equação endividamento
+
 
 * Referências
   :PROPERTIES:
